# kursovaya_3

./: README.md  main.py  pyproject.toml
src/: proc.py
tests/: test_proc.py
